view/css/steam_style.css
body{
    font-family: Arial, Helvetica, sans-serif;
    background-color: #4a4c68;
}

/* CABEÇALHO ESQUEMA LASTFM */
.header {
    background-color: #f1f1f1;
    margin-bottom: 10px;
    border-radius: 30px;
    background-color: #031331;
    display: inline-block;
    width: 100%;
    height: auto;
  }

.header img{
    max-width: 60px;
    width: 100%;
    height: auto;
    border-radius: 100px;
    border: solid white;
    float:left;
    margin-right: 10px;
}

.header .home{
    display:inline-block;
    text-decoration: none;
    font-size: 10px;
    color: white;
    border-radius: 20px;
    border: solid #6a78f6;
    margin:15px;
    padding: 10px 10px 2px 10px;
}

.header .home h1{
    float: left; 
    line-height: 50px;
}

.header .create {
    color: black;
    text-decoration: none;
    border-radius: 4px;
    border: solid black;
    padding: 10px 20px;
    border-radius: 30px;
    float:right;
    margin: 35px;
    font-size:20px;
    background-color: #6a78f6;
}

.header .create:hover {
    background-color: #8692f8!important;
}


@media (max-width: 420px) {
    .header .home h1{
        display: none;
    }
}

@media (min-width: 1024px) {
    .header {
        width: 80%;
        margin-right: 10%;
        margin-left: 10%;
    }
}

/* FIM CABEÇALHO */

/* AREA INICIAL */

.inicial{
    border-radius: 20px;
    border:solid 4px black;
    padding-left: 13%;
    padding-right: 13%;
    text-align: center;
    background-color:white;
    font-size: 20px;
}

.inicial a{
    color: black;
    background-color: #6a78f6;
    text-decoration: none;
    border-radius: 4px;
    border: solid black;
    border-radius: 20px;
    font-size:25px;
    margin:20px;
    padding: 15px 25px 15px 25px;
    display: inline-block;
}

.inicial a:hover {
    background-color: #8692f8!important;
}

/* Botões para outras páginas */
.inicial img{
    max-width: 40px;
    height: auto;
    margin-right: 10px;
    float:left;
}

.inicial .lastfm{
    background-color: #dd5955;
}
.inicial .lastfm:hover{
    background-color: #ff7f7a!important;
}

.inicial .spotify{
    background-color: #7bef6c;
}

.inicial .spotify:hover{
    background-color: rgb(123, 239, 108, .7)!important;
}

@media (min-width: 1024px) {
    .inicial{
        margin-right: 15%;
        margin-left: 15%;
    }
}
/* fim botões outras páginas */

/* area de ajuda */
.inicial .ajuda a{
    font-size:20px;
    padding: 10px;
}

.inicial .ajuda-oculta{
    margin-right: 30px;
    font-size: 18px;
    text-align: justify;
    display: none;
}

.inicial .ajuda-oculta a{
    font-size:20px;
    padding: 10px;
    background-color: white;
    border:none;
    color:blue;
    padding: 0px;
}
.inicial .ajuda-oculta a:hover{
    background-color: white!important;
    text-decoration: underline;
}

/* fim area de ajuda */
/* FIM AREA INICIAL */

/* AREA DA PERGUNTA */
.area-pergunta{
    border-radius: 20px;
    border:solid black 1px;
}

.numbers{
    background-color: #031331;
    color:white;
    border-radius: 20px;
    text-align: center;
    padding-left: 20px;
    padding-right: 20px;
    margin:20px;
}


.numbers p{
    display:inline-block;
    margin-right: 15px;
    padding: 15px;
    padding-right: 20px;
    padding-left: 20px;
    border-radius: 10px;
    background-color: #6a78f6;
}

.imagem-pergunta{
    margin-left:24%;
    margin-right:24%;
    margin-top: 10px;
    font-size: 30px;
}

img{
    max-width: 100%;
    height: auto;
}

.respostas{
    border-radius: 10px;
    padding:10px;
    margin:15px;
    background-color: rgb(167, 167, 167);
    font-size: 20px;
    text-indent: 15px;
}

.perguntas p:hover{
    cursor: pointer;
    background-color: #405c9c;
} 

.wrong_answr{
    transition-property: "background-color";
    transition-duration: 1s;
    background-color: red!important;
}

.right_answr{
    transition-property: "background-color";
    transition-duration: 1s;
    background-color: lime!important;
}

.reset_answr{
    transition-property: none;
    background-color: #a7a7a7;
}

@media (min-width: 1024px) {
    .area-pergunta{
        margin-right: 15%;
        margin-left: 15%;
    }
}

/* FIM AEA PEGUNTA */

/* AREA CRIANDO QUIZ */
input[type=text] {
    padding: 12px 20px;
    margin: 8px 0;
    border: solid black;
    border-radius: 10px;
    box-sizing: border-box;
    font-size:20px;
  }

input[type=range] {
    height: 25px;
    -webkit-appearance: none;
    margin: 10px 0;
}

input[type=range]::-webkit-slider-runnable-track {
width: 1050%;
height: 10px;
cursor: pointer;
box-shadow: 1px 1px 1px #000000;
background: #6a78f6;
border-radius: 5px;
border: 1px solid #000000;
}

input[type=range]::-webkit-slider-thumb {
box-shadow: 1px 1px 1px #000000;
border: 1px solid #000000;
height: 17px;
width: 17px;
border-radius: 5px;
background: #FFFFFF;
-webkit-appearance: none;
margin-top: -4.5px;
}

.inicial img{
    float:initial;
    display: none;
}

.inicial button{
    padding:7px;
    border-radius: 15px;
    border: solid 2px black;
    background-color: #6a78f6;
}

.inicial button:hover{
    background-color: #8692f8;
}

/* FIM CRIANDO QUIZ*/

/* AREA DO QUIZ */

.area-pergunta {
    background-color: white;
}

/* FIM AREA DO QUIZ */

